docspell/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docspell
  namespace: docspell
spec:
  selector:
    matchLabels:
      app: docspell
  template:
    metadata:
      labels:
        app: docspell
    spec:
      containers:

        - name: restserver
          image: ghcr.io/docspell/restserver:latest
          args:
            - /opt/docspell.conf
          ports:
            - containerPort: 7880
          volumeMounts:
            - name: rendered-config
              mountPath: /opt/docspell.conf
              subPath: application.conf
        - name: joex
          image: ghcr.io/docspell/joex:latest
          volumeMounts:
            - name: rendered-config
              mountPath: /opt/docspell.conf
              subPath: application.conf


        #- name: consumedir
        #  image: ghcr.io/docspell/consumedir:latest
        #  envFrom:
        #    - secretRef:
        #        name: docspell-secrets
        #  volumeMounts:
        #    - name: config
        #      mountPath: /opt/docspell/conf/application.conf
        #      subPath: application.conf

      volumes:
        - name: config
          configMap:
            name: docspell-config
        - name: rendered-config
          emptyDir: {}
