docspell/serices.yaml
apiVersion: v1
kind: Service
metadata:
  name: docspell
  namespace: docspell
spec:
  selector:
    app: docspell-restserver
  ports:
    - port: 80
      targetPort: 7880
