docspell/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docspell
  namespace: docspell
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - documents.services.atlantishq.de
      secretName: docspell-tls
  rules:
    - host: documents.services.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docspell
                port:
                  number: 80
